--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-livereload": "^3.8.1",
-    "gulp-uglify": "^3.0.0"
+    "gulp-minify-css": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
+    "install": "^0.10.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
