--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-declare": "^0.3.0",
     "gulp-handlebars": "^4.0.0",
     "gulp-imagemin": "^4.0.0",
+    "gulp-less": "^3.3.2",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
@@ -28,7 +29,8 @@
     "handlebars": "^4.0.11",
     "imagemin-jpeg-recompress": "^5.1.0",
     "imagemin-pngquant": "^5.0.1",
-    "install": "^0.10.2"
+    "install": "^0.10.2",
+    "less-plugin-autoprefix": "^1.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
